# Azimuth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AzimuthEngine/assets/shaders/: shader.slang
AzimuthEngine/inc/AzimuthEngine/backend/Vulkan/: AzmVkCore.hpp  AzmVkDevice.hpp  AzmVkLogicalDevice.hpp  AzmVkPhysDevice.hpp  AzmVkSwapChain.hpp
AzimuthEngine/inc/AzimuthEngine/core/: Application.hpp  Utility.hpp
AzimuthEngine/inc/AzimuthEngine/event/: Event.hpp  IntupEvent.hpp
AzimuthEngine/inc/AzimuthEngine/log/: log.hpp
AzimuthEngine/inc/AzimuthEngine/window/: GLFWWindow.hpp  GLFWWindowManager.hpp  IWindow.hpp  IWindowManager.hpp
AzimuthEngine/src/: Application.cpp  main.cpp
AzimuthEngine/src/backend/Vulkan/: AzmVkCore.cpp  AzmVkDevice.cpp  VkCore.cpp  VkLogicalDevice.cpp  VkPhysicalDevice.cpp  VkSwapChain.cpp
AzimuthEngine/src/log/: log.cpp
AzimuthEngine/src/window/: GLFWWindow.cpp  GLFWWindowManager.cpp
logs/: Azm-2026.12.04-22.36.47.txt  Azm-2026.12.04-22.57.19.txt  Azm-2026.12.04-22.58.32.txt  Azm-2026.12.04-23.03.23.txt  Azm-2026.12.04-23.04.00.txt
